[package]
name = "pico-libp2p"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-multiaddr = "0.9.1"
futures = "0.3.5"
actix = "0.10.0-alpha.3"
actix-rt = "1.1" # <-- Runtime for actix