[package]
name = "pico-libp2p"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-multiaddr = "0.9"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
pin-project = "0.1"
secrecy = "0.7"