[package]
name = "pico-libp2p"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-multiaddr = "0.9"
multihash = "*"
crossbeam = "0.8"
chrono = "0.4"
bytes = "0.6"
futures = "0.3"
pin-project = "1"